# gpt-00

./: test_irc_netcat.sh
devhistory/: ARCHITECTURE.md  DEPLOYMENT_GUIDE.md  DevHistoryRule.md  README.md
devhistory/DevHistory/: DevHistory02.md  DevHistory03.md  DevHistory04.md  DevHistory05.md  DevHistory06.md  DevHistory07.md  (+5 more)
devhistory_reconstruction/: DevHistory_CPP_MVP_1.md  DevHistory_CPP_MVP_2.md  DevHistory_CPP_MVP_3.md  DevHistory_CPP_MVP_4.md  DevHistory_CPP_MVP_5.md  DevHistory_CPP_MVP_6.md  DevHistory_C_MVP_1.md  DevHistory_C_MVP_2.md  DevHistory_C_MVP_3.md  DevHistory_C_MVP_4.md  DevHistory_C_MVP_5.md
extensions/: Extension00.md  Extension01.md  Extension02.md  Extension03.md  Extension04.md
log-caster-c-reconstructed/: Makefile
log-caster-cpp-reconstructed/: CMakeLists.txt
log-caster-cpp-reconstructed/include/: IRCChannel.h  IRCChannelManager.h  IRCClient.h  IRCClientManager.h  IRCCommandHandler.h  IRCCommandParser.h  IRCServer.h  LogBuffer.h  LogServer.h  Logger.h  Persistence.h  QueryHandler.h  QueryParser.h  ThreadPool.h
log-caster-cpp-reconstructed/src/: IRCChannel.cpp  IRCChannelManager.cpp  IRCClient.cpp  IRCClientManager.cpp  IRCCommandHandler.cpp  IRCCommandParser.cpp  IRCServer.cpp  LogBuffer.cpp  LogServer.cpp  Logger.cpp  Persistence.cpp  QueryHandler.cpp  QueryParser.cpp  ThreadPool.cpp  main.cpp
log-caster-cpp-reconstructed/tests/: test_irc.py  test_mvp2.py  test_persistence.py  test_security.py
log-caster-gemini/: DEVOPS_GUIDE.md  LEARNING_GUIDE.md  QUICKSTART.md  README.md
src/: DEVELOPMENT_JOURNEY.md  IRC_DESIGN.md
(+172 files in other folders)
